corrected search bar alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -421,12 +421,12 @@ body {
 }
 
 #jobsearch{
-    width: 650px;
+    width: 655px;
     padding-top: 7px;
 }
 
 #fixit-logo{
-    padding-right: 60px; 
+    padding-right: 40px; 
 }
 
 #myLabelCreator{
